--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -20,7 +20,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        font-size: 64px;
+        font-size: $title-size;
         color: $main-pink;
     }
 
