--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,5 +1,5 @@
 $bgr-color: rgba(52, 48, 68, 1);
-$bgr-gradient: linear-gradient(45deg, rgba(52, 48, 68, 1) 0%, rgba(17, 38, 63, 1) 100%);
+$bgr-gradient: linear-gradient(180deg, rgba(52, 48, 68, 1) 0%, rgba(17, 38, 63, 1) 100%);
 
 $main-pink: rgba(219, 195, 249, 1);
 $main-green: rgba(64, 119, 136, 1);
@@ -9,5 +9,13 @@ $pink-50: rgba($main-pink, 0.5);
 $green-50: rgba($main-green, 0.5);
 $green-20: rgba($main-green, 0.2);
 $green-10: rgba($main-green, 0.1);
+$white-85: rgba($main-white, 0.85);
+
+$title-size: 64px;
+$subtitle-size: 48px;
+$text-size: 20px;
+$table-text-size: 20px;
 
 $transition-time: 0.4s;
+
+$section-width: 50%;
