--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,6 +4,7 @@
 @import 'section.scss';
 @import 'about-me.scss';
 @import 'stack-grid.scss';
+@import 'works.scss';
 
 @font-face {
     font-family: 'Rubik';
