Finished with the main version of the site

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,10 +1,12 @@
 @import 'reset.scss';
 @import 'variables.scss';
 @import 'header.scss';
+@import 'contacts.scss';
 @import 'section.scss';
 @import 'about-me.scss';
 @import 'stack-grid.scss';
 @import 'works.scss';
+@import 'footer.scss';
 
 @font-face {
     font-family: 'Rubik';
