--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,8 +1,10 @@
 @import 'reset.scss';
 @import 'variables.scss';
-@import 'header.scss';
 @import 'contacts.scss';
 @import 'section.scss';
+@import 'sticky-text.scss';
+@import 'slider.scss';
+@import 'header.scss';
 @import 'about-me.scss';
 @import 'stack-grid.scss';
 @import 'works.scss';
