--- a/src/sass/section.scss
+++ b/src/sass/section.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     gap: 30px;
+    margin: 0 0 30px 0;
 }
 
 .section{
@@ -16,6 +17,10 @@
 
     width: $section-width;
     padding: 30px 0;
+
+    &_sticky-wrapper{
+        width: $section-width+10%;
+    }
 }
 
 .section-title{
