--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -4,12 +4,14 @@ $bgr-gradient: linear-gradient(180deg, rgba(52, 48, 68, 1) 0%, rgba(17, 38, 63, 
 $main-pink: rgba(219, 195, 249, 1);
 $main-green: rgba(64, 119, 136, 1);
 $main-white: rgba(255, 255, 255, 1);
+$footer-color: rgba(14, 31, 51, 0.3);
 
 $pink-50: rgba($main-pink, 0.5);
 $green-50: rgba($main-green, 0.5);
 $green-20: rgba($main-green, 0.2);
 $green-10: rgba($main-green, 0.1);
 $white-85: rgba($main-white, 0.85);
+$white-40: rgba($main-white, 0.40);
 
 $title-size: 64px;
 $subtitle-size: 48px;
