--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -8,6 +8,13 @@
     width: 100%;
     height: 300px;
 
+    @include tablet-portrait{
+        flex-direction: column;
+        justify-content: center;
+        gap: 50px;
+        height: 250px;
+    }
+
     &__mail{
         position: relative;
         color: $main-white;
@@ -16,6 +23,22 @@
         opacity: 0.7;
 
         transition: opacity $transition-time;
+
+        @include tablet{
+            opacity: 1;
+        }
+
+        @include tablet{
+            font-size: 40px;
+        }
+
+        @include tablet-portrait{
+            font-size: 32px;
+        }
+
+        @include medium-phone{
+            font-size: 22px;
+        }
     }
 
     &__mail::after{
@@ -36,6 +59,10 @@
 
     &__mail:hover::after{
         width: 100%;
+
+        @include tablet{
+            width: 50px;
+        }
     }
 
     &__mail:active{
