--- a/src/sass/section.scss
+++ b/src/sass/section.scss
@@ -6,6 +6,11 @@
     align-items: center;
     gap: 30px;
     margin: 0 0 30px 0;
+    
+    @include tablet-portrait{
+        gap: 10px;
+        margin: 0 0 10px 0;
+    }
 }
 
 .section{
@@ -18,8 +23,32 @@
     width: $section-width;
     padding: 30px 0;
 
+    @include tablet{
+        width: 70%;
+    }
+
+    @include small-tablet{
+        width: 80%;
+    }
+
+    @include tablet-portrait{
+        width: 90%;
+    }
+
     &_sticky-wrapper{
         width: $section-width+10%;
+
+        @include tablet{
+            width: 80%;
+        }
+
+        @include small-tablet{
+            width: 90%;
+        }
+
+        @include tablet-portrait{
+            width: 90%;
+        }
     }
 }
 
@@ -27,4 +56,23 @@
     font-size: $subtitle-size;
     color: $main-white;
     margin: 0 0 75px 0;
+
+    @include tablet{
+        font-size: 40px;
+    }
+
+    @include tablet-portrait{
+        margin: 0 0 40px 0;
+        font-size: 32px;
+    }
+
+    @include large-phone{
+        font-size: 24px;
+        margin: 0 0 30px 0;
+    }
+
+    @include medium-phone{
+        font-size: 20px;
+        margin: 0 0 20px 0;
+    }
 }
