--- a/src/sass/works.scss
+++ b/src/sass/works.scss
@@ -5,6 +5,14 @@
         align-items: center;
         gap: 20px;
         margin: 0 0 60px 0;
+
+        @include tablet-portrait{
+            margin: 0 0 30px 0;
+        }
+    }
+
+    @include tablet-portrait{
+        gap: 10px;
     }
 
     &__link{
@@ -13,6 +21,20 @@
         letter-spacing: 2px;
         text-decoration: none;
         transition: color $transition-time;
+
+        @include tablet{
+            color: $white-85;
+        }
+
+        @include tablet-portrait{
+            font-size: 15px;
+        }
+
+        @include mini-tablet-portrait{
+            white-space: normal;
+            word-break: break-word;
+            text-decoration: underline;
+        }
     }
 
     &__el{
@@ -37,6 +59,24 @@
         opacity: 0.4;
 
         transition: opacity $transition-time;
+
+        @include tablet{
+            opacity: 1;
+        }
+
+        @include tablet-portrait{
+            height: 15px;
+            left: calc(-0.3*(100vw - 367px));
+        }
+
+        @include mini-tablet-portrait{
+            opacity: 0.4;
+            z-index: -1;
+        }
+
+        @include large-phone{
+            left: calc(-0.2*(100vw - 295px));
+        }
     }
 
     &__el:hover:before{
@@ -63,6 +103,10 @@
 
         font-size: $text-size;
         color: $main-white;
+
+        @include tablet-portrait{
+            font-size: 15px;
+        }
     }
 
     &__abbr::before{
@@ -73,6 +117,10 @@
 
         width: $text-size;
         height: $text-size;
+
+        @include tablet-portrait{
+            height: 15px;
+        }
     }
 
     &__abbr_pink::before{
